<resources>
    <string name="app_name" translatable="false">InstaApp</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="or">OR</string>
    <string name="does_not_have_account">Does not have a account? <b>Register now!</b></string>
    <string name="already_has_account">Already have a account? <b>login now.</b></string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="continuee">Continue</string>
    <string name="agree_terms_policy">If you click on next, you will agree with our <b>Data and Cookies policy terms</b></string>
    <string name="welcome_to_instaapp"><b>WELCOME TO INSTAAPP,\n%1$s</b>\nFind people to follow and start sharing your pictures. You can change your username any time</string>
    <string name="photo_register_subtitle">Add a profile pictor to your friends know who you are</string>
    <string name="photo_register_title">Add a profile picture</string>
    <string name="take_picture">Take a picture</string>
    <string name="search_gallery">Choose from gallery</string>
    <string name="define_photo_profile">Define a profile picture</string>
    <string name="skip">Skip</string>
    <string name="add_photo">Add photo</string>
    <string name="home">Home</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="username">username</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="invalid_password">Password must have at least 8 characters</string>
    <string name="invalid_name">Name must have at least 3 characters</string>
    <string name="password_not_equal">The two passwords must be iqual.</string>
    <string name="save">Save</string>
    <string name="title_activity_add" translatable="false">AddActivity</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="write_caption">Write a caption…</string>
    <string name="share">Share</string>
    <string name="go">Forward</string>
    <string name="search">Search</string>
    <string name="unfollow">Following</string>
    <string name="follow">Follow</string>
    <string name="logout">Do you wish to logout?</string>
    <string name="logout_action">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="empty_list">No posts found</string>
    <string name="empty_image">No pictures found</string>
    <string name="permission_camera_denied">Camera permission not granted</string>
</resources>