<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorOnPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_marginBottom="48dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:contentDescription="@null"
        android:src="@drawable/instaapp_logo_black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtLoginEmailInput"
        app:hintEnabled="false"
        style="@style/Theme.InstaApp.FormEditTextInput">
    
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtLoginEmail"
        android:hint="@string/email"
        android:autofillHints="@null"
        android:inputType="textEmailAddress"
        style="@style/Theme.InstaApp.FormEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtLoginPasswordInput"
        app:hintEnabled="false"
        style="@style/Theme.InstaApp.FormEditTextInput">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtLoginPassword"
        android:hint="@string/password"
        android:autofillHints="@null"
        android:inputType="textPassword"
        style="@style/Theme.InstaApp.FormEditText" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <br.com.raulreis.instaapp.common.view.LoadingButton
        app:text="@string/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLoginEnter" />

    <FrameLayout
        style="@style/Theme.InstaApp.FormContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <View
            android:layout_gravity="center"
            android:background="@color/gray_darker"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        
        <TextView
            android:layout_gravity="center"
            android:background="?colorOnPrimary"
            android:text="@string/or"
            android:padding="8dp"
            style="@style/Theme.InstaApp.TextViewBase"/>
    </FrameLayout>
</LinearLayout>
    </ScrollView>
    
    <View
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txvLoginRegister"
        android:background="@color/gray_darker"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    
    <TextView
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:textColor="?colorPrimary"
        android:background="?colorOnPrimary"
        android:text="@string/does_not_have_account"
        android:id="@+id/txvLoginRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="24dp"
        android:textAlignment="center"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Theme.InstaApp.TextViewBase" />
</androidx.constraintlayout.widget.ConstraintLayout>