<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingVertical="70dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtRegisterNameInput"
                app:hintEnabled="false"
                style="@style/Theme.InstaApp.FormEditTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRegisterName"
                    android:hint="@string/name"
                    android:autofillHints="@null"
                    android:inputType="textPersonName"
                    style="@style/Theme.InstaApp.FormEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtRegisterPasswordInput"
                app:hintEnabled="false"
                style="@style/Theme.InstaApp.FormEditTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRegisterPassword"
                    android:hint="@string/password"
                    android:autofillHints="@null"
                    android:inputType="textPassword"
                    style="@style/Theme.InstaApp.FormEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtRegisterConfirmInput"
                app:hintEnabled="false"
                style="@style/Theme.InstaApp.FormEditTextInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtRegisterConfirm"
                    android:hint="@string/password_confirm"
                    android:autofillHints="@null"
                    android:inputType="textPassword"
                    style="@style/Theme.InstaApp.FormEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <br.com.raulreis.instaapp.login.view.LoadingButton
                app:text="@string/continuee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegisterNameNext" />

        </LinearLayout>
    </ScrollView>

    <View
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txvRegisterLogin"
        android:background="@color/gray_darker"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/white"
        android:text="@string/already_has_account"
        android:id="@+id/txvRegisterLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="24dp"
        android:textAlignment="center"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Theme.InstaApp.TextViewBase" />
</androidx.constraintlayout.widget.ConstraintLayout>