<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorOnPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingBottom="70dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:background="@color/white">
            
            <TextView
                android:id="@+id/txvWelcome"
                android:text="@string/welcome_to_instaapp"
                style="@style/Theme.InstaApp.TextViewBase.Form"/>



            <br.com.raulreis.instaapp.common.view.LoadingButton
                app:text="@string/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegisterWelcomeNext" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:textColor="?colorPrimary"
        android:background="?colorOnPrimary"
        android:text="@string/agree_terms_policy"
        android:id="@+id/txvRegisterTerms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="24dp"
        android:textAlignment="center"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Theme.InstaApp.TextViewBase" />
</androidx.constraintlayout.widget.ConstraintLayout>